package it.unipd.search.repository;

import it.unipd.search.dto.CacheDocument;
import org.springframework.data.mongodb.repository.MongoRepository;
import org.springframework.stereotype.Repository;

import java.util.List;

/**
 * MongoDB repository interface for {@link CacheDocument} entities.
 *
 * <p>This repository provides CRUD operations and query methods
 * for accessing cached search results stored in MongoDB. Query
 * implementations are automatically generated by Spring Data
 * based on method naming conventions.</p>
 */
@Repository
public interface DocumentRepository extends MongoRepository<CacheDocument, String> {

    /**
     * Retrieves cached documents associated with the specified search query.
     *
     * <p>The query is derived automatically by Spring Data MongoDB
     * from the method name.</p>
     *
     * @param query the search query string
     * @return list of matching {@link CacheDocument} instances
     */
    List<CacheDocument> findByQuery(String query);
}
