@startuml
title Project Package Diagram - Searcher & Inferer Modules

skinparam packageStyle rectangle
skinparam shadowing false
skinparam FontSize 14

package "it.unipd.searcher" {

    package "api" {
        class SearchController
    }

    package "service" {
        class SearchService
        class DocumentService
    }

    package "repository" {
        class DocumentRepository
    }

    package "client" {
        class InfererClient
    }

    package "model" {
        class Document
        class CacheDocument
    }
}

package "it.unipd.inferer" {

    package "api" {
        class InfererController
    }

    package "service" {
        class DocService
        class DocServiceImpl
        class JsonInferencerService
    }

    package "dto" {
        class Document
    }
}

package "External Systems" {

    package "Elasticsearch" {
        class ElasticsearchClient_Search
    }

    package "MongoDB" {
        class MongoRepository
    }

    package "MALLET" {
        class TopicInferencer
        class ParallelTopicModel
        class Pipe
    }
}

' ==== Dependencies ====

SearchController --> SearchService
SearchController --> DocumentService
SearchController --> InfererClient

DocumentService --> DocumentRepository
DocumentRepository --> MongoRepository

SearchService --> ElasticsearchClient_Search

InfererClient --> InfererController

InfererController --> DocService
DocServiceImpl ..|> DocService
DocServiceImpl --> JsonInferencerService

JsonInferencerService --> TopicInferencer
JsonInferencerService --> ParallelTopicModel
JsonInferencerService --> Pipe

@enduml

